fixed searchbar container squashing

--- a/src/admin/component/InventoryContent/InventoryContent.scss
+++ b/src/admin/component/InventoryContent/InventoryContent.scss
@@ -21,7 +21,6 @@
 
 .searchbar-filters-button-wrapper.admin {
   position: relative;
-  height: 9%;
   width: 100%;
 }
 
